[package]
name = "seam-carving-wasm"
version = "0.1.0"
authors = ["Dennis Kats <denniskats@example.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.6"
rayon = "1.8"
wasm-bindgen-rayon = "1.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]


[profile.release]
opt-level = 3
lto = true

